--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ span{
 	font-family: tahoma;
 	color: white;
 }
-ul{
+.main ul{
 
 	width: 50vw;
 	padding: 0;
@@ -39,7 +39,7 @@ ul{
 	list-style-type: none;
 }
 
-li div {
+.main li div {
 	padding: 1vw;
 	border-radius: 3px;
 	-webkit-transition: all 0.3s ease;
@@ -166,6 +166,24 @@ a {
 	transition: all 0.3s ease;
 }
 
+.modal_alert {
+	backdrop-filter: blur(5px);
+	position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	background: rgba(21,120,120,.5);
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+
 
 label{
 	text-align: center;
@@ -189,9 +207,6 @@ label{
 	font-weight: normal;
 	font-size: 1.3vw;
 	color: white;
-}
-.input_form:focus{
-
 }
 .darker{
 	padding: 50px;
